--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,10 @@ dependencies = [
     "uvicorn (>=0.37.0,<0.38.0)",
     "python-dotenv (>=1.1.1,<2.0.0)",
     "psycopg2-binary (>=2.9.10,<3.0.0)",
-    "pydantic[email] (>=2.12.0,<3.0.0)"
+    "pydantic[email] (>=2.12.0,<3.0.0)",
+    "alembic (>=1.16.5,<2.0.0)",
+    "pytest (>=8.4.2,<9.0.0)",
+    "httpx (>=0.28.1,<0.29.0)"
 ]
 
 
