--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=postgresql://postgres:Dinesh2003@localhost:5433/LibroAPI
+DATABASE_URL=postgresql://postgres:Dinesh2003@localhost:5433/karimajjidineshkumar
