--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,13 @@ dependencies = [
     "pydantic[email] (>=2.12.0,<3.0.0)",
     "alembic (>=1.16.5,<2.0.0)",
     "pytest (>=8.4.2,<9.0.0)",
-    "httpx (>=0.28.1,<0.29.0)"
+    "httpx (>=0.28.1,<0.29.0)",
+    "requests (>=2.32.5,<3.0.0)",
+    "pyjwt (>=2.10.1,<3.0.0)",
+    "pwdlib (>=0.2.1,<0.3.0)",
+    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
+    "bcrypt (==3.2.2)",
+    "python-jose[cryptography] (>=3.5.0,<4.0.0)"
 ]
 
 
